fable/test/syntax_error/bad_implied_do_4.f
      program prog
      write(6, *) (i,i=1,j=2)
      end
